# vnpy_ctabacktester

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
cta_backtester/: engine.py
script/: run.py
vnpy_ctabacktester/: __init__.py  engine.py
vnpy_ctabacktester/locale/: __init__.py  build_hook.py  generate_mo.bat  generate_pot.bat  vnpy_ctabacktester.pot
vnpy_ctabacktester/locale/en/LC_MESSAGES/: vnpy_ctabacktester.po
vnpy_ctabacktester/ui/: __init__.py  widget.py
